[package]
name = "rosbag2-loader-rs"
version = "0.1.0"
edition = "2018"
description = "Data loader for rosbag2"
keywords = ["Robotics", "ROS", "ROS2"]
license = "MIT"
readme = "README.md"
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/rosbag2-loader-rs"
publish = false
exclude = ["data/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.3"
